# AMRI-Adaptive-Misspecification-Robust-Inference

./: .gitignore  AMRI_METHOD.md  EXPERIMENTAL_DESIGN.md  HYPOTHESES.md  Makefile  PAPER_DRAFT.md  README.md  REFERENCES.md  RESEARCH_PLAN.md  pyproject.toml  requirements.txt  run_all.py  run_full_analysis.py  setup.py
amri/: __init__.py  core.py  diagnostics.py  estimators.py
dashboard/: Dockerfile  app.py  render.yaml  requirements.txt
figures/: FINAL_summary_stats.csv  coverage_table.csv  real_data_results.csv  summary_table_full.csv
paper/: ecta-sample.bst  main.tex  supplement.tex
results/: log_competitor.txt  log_formal_theory.txt  log_minimax.txt  log_realdata.txt  log_stat_guarantees.txt  results_amri_v2.csv  results_competitor_comparison.csv  results_competitor_full.csv  results_convergence_rate.csv  results_full.csv  results_generalized.csv  results_intermediate.csv  results_minimax_lower_bound.csv  results_near_uniform_coverage.csv  results_oracle_efficiency.csv  results_pilot.csv  results_theorem1_continuity.csv  results_theorem2_coverage.csv  results_theorem3_efficiency.csv  results_threshold_proof.csv
src/: amri_figure.py  amri_generalized.py  analyze_and_plot.py  competitor_comparison.py  create_visualizations.py  deep_analysis.py  formal_theory.py  generalization_proof.py  minimax_theory.py  publication_figures.py  real_data_validation.py  reanalyze_complete.py  run_amri_v2_standalone.py  run_fast.py  run_full_vectorized.py  run_generalized_simulation.py  run_optimized.py  run_vectorized_v2.py  simulation.py  statistical_guarantees.py  (+3 more)
(+16 files in other folders)
